--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/images/logo-sangpisang.png">
-  <link rel="stylesheet" href="styles/aboutus-styles.css"></head>
+  <link rel="stylesheet" href="styles/aboutus-styles.css">
+  <title>About Us</title>
+</head>
 <body>
   <header>
     <nav class="nav-bar">
@@ -63,7 +65,7 @@
             </button>
         </div>
     </nav>
-  </header> 
+  </header>
 
     <div class='banner'>
       <h1> ABOUT US</h1>
@@ -111,7 +113,7 @@
       </div>
     </div>
 
-    <script src="/scripts/indexMenu.js">
+    <script src="scripts/indexHome.js">
       const carouselSlide = document.querySelector('.carousel-slide');
       const carouselItems = document.querySelectorAll('.carousel-item');
       const prevButton = document.querySelector('.carousel-nav.left');
