--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/images/logo-sangpisang.png">
     <link rel="stylesheet" href="styles/menu-styles.css">
-    <title>Our Menu</title>
+    <title>Shop</title>
 </head>
 <body>
     <header>
