--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="nav-menu">
                 <ul class="menu-bar">
-                    <li><a class="nav-link" href="home.html">Home</a></li>
+                    <li><a class="nav-link" href="index.html">Home</a></li>
                     <li><a class="nav-link" href="menu.html">Shop</a></li>
                     <li><a class="nav-link" href="about-us.html">About Us</a></li>
                 </ul>
