--- a/about-us.html
+++ b/about-us.html
@@ -85,7 +85,7 @@
     <div class="carousel-container">
       <div class="carousel-slide">
         <div class="carousel-item">
-          <img src="/images/pisang1.jpeg" alt="Image 1">
+          <img src="images/pisang1.jpeg" alt="Image 1">
         </div>
         <div class="carousel-item">
           <img src="/images/pisang2.jpeg" alt="Image 2">
