--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="/styles/home-styles.css"/>
+        <link rel="stylesheet" href="styles/home-styles.css"/>
         <script src="scripts/indexHome.js" defer></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-        <link rel="icon" type="image/png" href="/images/logo-sangpisang.png">
+        <link rel="icon" type="image/png" href="images/logo-sangpisang.png">
         <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     </head>
     
@@ -15,7 +15,7 @@
         <nav class="nav-bar">
             <div>
                 <a href="home.html">
-                    <img src="/images/logo-sangpisang.png" class="logo" alt="logo perusahaan">
+                    <img src="images/logo-sangpisang.png" class="logo" alt="logo perusahaan">
                 </a>
             </div>
             <div class="nav-menu">
