--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="/images/logo-sangpisang.png">
+  <link rel="icon" type="image/png" href="images/logo-sangpisang.png">
   <link rel="stylesheet" href="styles/aboutus-styles.css">
   <title>About Us</title>
 </head>
@@ -13,7 +13,7 @@
     <nav class="nav-bar">
         <div>
             <a href="home.html">
-                <img src="/images/logo-sangpisang.png" class="logo" alt="logo perusahaan">
+                <img src="images/logo-sangpisang.png" class="logo" alt="logo perusahaan">
             </a>
         </div>
         <div class="nav-menu">
@@ -88,13 +88,13 @@
           <img src="images/pisang1.jpeg" alt="Image 1">
         </div>
         <div class="carousel-item">
-          <img src="/images/pisang2.jpeg" alt="Image 2">
+          <img src="images/pisang2.jpeg" alt="Image 2">
         </div>
         <div class="carousel-item">
-          <img src="/images/pisang3.jpeg" alt="Image 3">
+          <img src="images/pisang3.jpeg" alt="Image 3">
         </div>
 		<div class="carousel-item">
-          <img src="/images/pisang4.jpg" alt="Image 4">
+          <img src="images/pisang4.jpg" alt="Image 4">
         </div>
       </div>
 
@@ -109,7 +109,7 @@
       </div>
 
       <div class="gridimage">
-        <img src="/images/pisang5.jpg" alt="Image 5" width="80%">
+        <img src="images/pisang5.jpg" alt="Image 5" width="80%">
       </div>
     </div>
 
