--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/images/logo-sangpisang.png">
+    <link rel="icon" type="image/png" href="images/logo-sangpisang.png">
     <link rel="stylesheet" href="styles/menu-styles.css">
     <title>Shop</title>
 </head>
@@ -13,7 +13,7 @@
         <nav class="nav-bar">
             <div>
                 <a href="home.html">
-                    <img src="/images/logo-sangpisang.png" class="logo" alt="logo perusahaan">
+                    <img src="images/logo-sangpisang.png" class="logo" alt="logo perusahaan">
                 </a>
             </div>
             <div class="nav-menu">
