--- a/about-us.html
+++ b/about-us.html
@@ -12,7 +12,7 @@
   <header>
     <nav class="nav-bar">
         <div>
-            <a href="home.html">
+            <a href="index.html">
                 <img src="images/logo-sangpisang.png" class="logo" alt="logo perusahaan">
             </a>
         </div>
@@ -67,76 +67,60 @@
     </nav>
   </header>
 
-    <div class='banner'>
-      <h1> ABOUT US</h1>
-    </div>
-	
- <div class='container'>
+  <div class='banner'>
+    <h1> ABOUT US</h1>
+  </div>
+
+  <div class='container'>
 
     <center>
       <div class='history'>
-        <h2>HISTORY
-          <br><span style='color: black;'>The Beginning SangPisang</span></h2>
+        <h2>HISTORY</h2>
+        <h2 style='color: black;'>The Beginning SangPisang</h2>
 
-        <p>It starts with someone who does various ways to produce culinary products that are liked by the Indonesian tongue. Kaesang Pangarep and Ansari Kadir have been struggling to build the Sang Pisang business since 2017. With the initial joint venture capital, the banana nugget business in Cempaka Emas became the premiere outlet. Entering its third month, Sang Pisang has five outlets in the Jakarta area and within 5 years running, Sang Pisang has 100 outlets spread across a number of cities in Indonesia. </p>
+        <p>It starts with someone who does various ways to produce culinary products that are liked by the Indonesian
+          tongue. Kaesang Pangarep and Ansari Kadir have been struggling to build the Sang Pisang business since 2017.
+          With the initial joint venture capital, the banana nugget business in Cempaka Emas became the premiere outlet.
+          Entering its third month, Sang Pisang has five outlets in the Jakarta area and within 5 years running, Sang
+          Pisang has 100 outlets spread across a number of cities in Indonesia. </p>
       </div>
     </center>
 
-    <div class="carousel-container">
-      <div class="carousel-slide">
-        <div class="carousel-item">
-          <img src="images/pisang1.jpeg" alt="Image 1">
+    <div class="body2">
+      <section class="wrapper">
+        <span class="button left" id="prev">&#8249;</span>
+        <div class="image-container">
+          <div class="carousel">
+            <img class="carousel-item" src="images/pisang1.jpeg" alt="" />
+            <img class="carousel-item" src="images/pisang2.jpeg" alt="" />
+            <img class="carousel-item" src="images/pisang3.jpeg" alt="" />
+            <img class="carousel-item" src="images/pisang4.jpg" alt="" />
+          </div>
+          <span class="button right" id="next">&#8250;</span>
         </div>
-        <div class="carousel-item">
-          <img src="images/pisang2.jpeg" alt="Image 2">
-        </div>
-        <div class="carousel-item">
-          <img src="images/pisang3.jpeg" alt="Image 3">
-        </div>
-		<div class="carousel-item">
-          <img src="images/pisang4.jpg" alt="Image 4">
-        </div>
-      </div>
-
-      <div class="carousel-nav left">&#8249;</div>
-      <div class="carousel-nav right">&#8250;</div>
-    </div><br><Br>
+      </section>
+    </div>
+    <div class="carousel-dots">
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+    </div>
+    <br><br>
 
     <div class="grid">
       <div class="text">
         <h2>Most Popular</h2>
-        <p>Let's meet the most popular at SangPisang, Banana Nugget. Has an attractive appearance with abundant glaze toppings on it. The taste of the sweet banana nugget, combined with the crispy outside of the panir flour. Additional toppings make a rich taste in every bite!</p>
+        <p>Let's meet the most popular at SangPisang, Banana Nugget. Has an attractive appearance with abundant glaze
+          toppings on it. The taste of the sweet banana nugget, combined with the crispy outside of the panir flour.
+          Additional toppings make a rich taste in every bite!</p>
       </div>
 
       <div class="gridimage">
         <img src="images/pisang5.jpg" alt="Image 5" width="80%">
       </div>
     </div>
-
-    <script src="scripts/indexHome.js">
-      const carouselSlide = document.querySelector('.carousel-slide');
-      const carouselItems = document.querySelectorAll('.carousel-item');
-      const prevButton = document.querySelector('.carousel-nav.left');
-      const nextButton = document.querySelector('.carousel-nav.right');
-
-      let currentIndex = 0;
-      const slideWidth = carouselItems[0].clientWidth;
-
-      prevButton.addEventListener('click', () => {
-        currentIndex = (currentIndex === 0) ? carouselItems.length - 1 : currentIndex - 1;
-        updateSlidePosition();
-      });
-
-      nextButton.addEventListener('click', () => {
-        currentIndex = (currentIndex === carouselItems.length - 1) ? 0 : currentIndex + 1;
-        updateSlidePosition();
-      });
-
-      function updateSlidePosition() {
-        carouselSlide.style.transform = `translateX(${-currentIndex * slideWidth}px)`;
-      }
-    </script>
-
-  </div>
+</div>
+<script src="scripts/indexAboutus.js"></script>
 </body>
 </html>
