--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <title>Home</title>
         <link rel="stylesheet" href="styles/home-styles.css"/>
-        <script src="scripts/indexHome.js" defer></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
         <link rel="icon" type="image/png" href="images/logo-sangpisang.png">
@@ -154,8 +153,7 @@
                   />
                 </center>
                 <p>
-                  "Pertama kali makan pisang nugget dan langsung jatuh cinta sama
-                  rasanya!"
+                  "Pertama kalinya makan pisang nugget dan langsung jatuh cinta sama  rasanya! Ice banananya lumayan"
                 </p>
                 <b><h3>Kim Namjoon</h3></b>
                 <div class="stars">
@@ -175,8 +173,7 @@
                   />
                 </center>
                 <p>
-                  "Asli ini enak banget! Pisangnya tebel, toppingnya banyak,
-                  crispynya juga dapet"
+                  "Asli ini enak banget! Pisangnya tebel, toppingnya banyak, crispynya juga dapet. Fiks, bakal balik lagi"
                 </p>
                 <b><h3>Kim Seokjin</h3></b>
                 <div class="stars">
@@ -196,8 +193,7 @@
                   />
                 </center>
                 <p>
-                  "Rasa enak, topping banyak dan bervariasi, harga terjangkau.
-                  Cuma agak lama nunggunya"
+                  "Rasa enak, topping banyak dan bervariasi, harga terjangkau. Cuma agak lama nunggunya"
                 </p>
                 <b><h3>Min Yoongi</h3></b>
                 <div class="stars">
@@ -238,8 +234,7 @@
                   />
                 </center>
                 <p>
-                  "Salah satu pisang nugget terenak, variasi topping juga banyak.
-                  Harga terjangkau"
+                  "Salah satu pisang nugget terenak, variasi topping juga banyak. Tapi ice banananya sih yang ngangenin bangeet"
                 </p>
                 <b><h3>Park Jimin</h3></b>
                 <div class="stars">
@@ -260,7 +255,7 @@
                 </center>
                 <p>
                   "Rasa nuggetnya enak, apalagi ditambah topping almondnya. Agak
-                  pricey tapi worth it sih"
+                  pricey tapi worth it"
                 </p>
                 <b><h3>Kim Taehyung</h3></b>
                 <div class="stars">
@@ -329,6 +324,6 @@
           </div>
 
         </section>
-
+        <script src="scripts/indexHome.js"></script>
     </body>
 </html>
