footer-menu responsive

--- a/index.html
+++ b/index.html
@@ -324,6 +324,40 @@
           </div>
 
         </section>
+      <footer class="footer">
+        <div class="footer-container">
+              <div class="footer-row">
+              <div class="footer-col">
+                  <a href="index.html">
+                      <img src="images/logo-sangpisang.png" alt="">
+                  </a>
+              </div>
+              <div class="footer-col"></div>
+                  <div class="footer-col">
+                      <h4>company</h4>
+                      <ul>
+                          <li><a href="#">about us</a></li>
+                          <li><a href="#">our services</a></li>
+                          <li><a href="#">affiliate program</a></li>
+                      </ul>
+                  </div>
+                  <div class="footer-col">
+                      <h4>get help</h4>
+                      <ul>
+                          <li><a href="#">FAQ</a></li>
+                          <li><a href="#">privacy policy</a></li>
+                          <li><a href="#">terms & condition</a></li>
+                      </ul>
+                  </div>
+              </div>
+          <div class="legal">
+              <hr class="footer-line">
+              <div class="footer-rights">
+                  <span>© 2023 SangPisang by Team 5 Bhinneka. All Rights Reserved.</span>
+              </div>
+          </div>
+        </div>
+      </footer>
         <script src="scripts/indexHome.js"></script>
     </body>
 </html>
